1,脚本优化和修改。 2，添加对内接口。